; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mdio.c_b53_phy_remove.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mdio.c_b53_phy_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { %struct.b53_device* }
%struct.b53_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.phy_device*)* @b53_phy_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b53_phy_remove(%struct.phy_device* %0) #0 {
  %2 = alloca %struct.phy_device*, align 8
  %3 = alloca %struct.b53_device*, align 8
  store %struct.phy_device* %0, %struct.phy_device** %2, align 8
  %4 = load %struct.phy_device*, %struct.phy_device** %2, align 8
  %5 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %4, i32 0, i32 0
  %6 = load %struct.b53_device*, %struct.b53_device** %5, align 8
  store %struct.b53_device* %6, %struct.b53_device** %3, align 8
  %7 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %8 = icmp ne %struct.b53_device* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %12 = call i32 @b53_switch_remove(%struct.b53_device* %11)
  %13 = load %struct.phy_device*, %struct.phy_device** %2, align 8
  %14 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %13, i32 0, i32 0
  store %struct.b53_device* null, %struct.b53_device** %14, align 8
  br label %15

15:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @b53_switch_remove(%struct.b53_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
